# Local-CrewAI

./: .env  README.md  pyproject.toml  report.md  research.md
src/conundrum/: crew.py  main.py
src/conundrum/config/: agents.yaml  tasks.yaml
